--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,7 +13,37 @@
     <title>Brussels Brews</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="mainTitle">
+        <div>
+          <h1>Brussels Brews</h1>
+          <nav>
+            <ul>
+              <li>Home</li>
+              <li>About</li>
+              <li>Menu</li>
+              <li>Contact Us</li>
+            </ul>
+          </nav>
+        </div>
+        <div><img src="/pictures/logo.png" alt="" /></div>
+      </div>
+
+      <div class="hourAdress">
+        <div class="hourAdress_each">
+          <span><i class="fa-regular fa-clock"></i></span>
+          <div>
+            <p>Monday-Saturday <br />AM 9:00- PM 6:00</p>
+          </div>
+        </div>
+        <div class="hourAdress_each">
+          <span><i class="fa-solid fa-location-dot"></i></span>
+          <div>
+            <p>Rue des Artisans 42 <br />1000 Bruxelles</p>
+          </div>
+        </div>
+      </div>
+    </header>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
