--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
             </ul>
           </nav>
         </div>
-        <div><img src="/pictures/logo.png" alt="" /></div>
+        <div><img class="logo" src="/pictures/logo.png" alt="logo" /></div>
       </div>
-
       <div class="hourAdress">
         <div class="hourAdress_each">
           <span><i class="fa-regular fa-clock"></i></span>
@@ -44,6 +43,111 @@
         </div>
       </div>
     </header>
+    <section class="sectionAbout">
+      <div>
+        <h2>Best Coffee in town</h2>
+        <h3>Brussels' gem</h3>
+        <p>
+          Welcome to Brussels Brews, your go-to café in the heart of Brussels
+          for exceptional coffee, warm connections, and a taste of Belgium's
+          finest. Here, we're all about celebrating the vibrant culture of our
+          city while crafting moments that feel personal and inviting.
+        </p>
+      </div>
+      <div>
+        <img class="coffeeImg" src="/pictures/design-coffee.png" alt="coffee" />
+      </div>
+    </section>
+    <section class="sectionMenu">
+      <div class="grid">
+        <div class="grid-1 row">
+          <img class="col-sm-7" src="/pictures/grid/bike.jpg" alt="shop" />
+          <img class="col-sm-5" src="/pictures/grid/coffee.jpg" alt="coffee" />
+        </div>
+        <div class="grid-2 row">
+          <img class="col-4" src="/pictures/grid/table.jpg" alt="coffee" />
+          <img class="col-4" src="/pictures/grid/outside.jpg" alt="shop" />
+          <img
+            class="col-4"
+            src="/pictures/grid/coffee-maker.jpg"
+            alt="coffee maker"
+          />
+        </div>
+      </div>
+      <div class="menu">
+        <h3>Menu</h3>
+        <h4>Drinks</h4>
+        <div class="tableDrink">
+          <div class="tableDrink_1">
+            <div class="tableDrink_each">
+              <p>Espresso</p>
+              <p>€2.50</p>
+            </div>
+            <div class="tableDrink_each">
+              <p>Americano</p>
+              <p>€3.00</p>
+            </div>
+            <div class="tableDrink_each">
+              <p>Cappuccino</p>
+              <p>€3.50</p>
+            </div>
+            <div class="tableDrink_each">
+              <p>Latte</p>
+              <p>€3.50</p>
+            </div>
+          </div>
+          <div class="tableDrink_2">
+            <div class="tableDrink_each">
+              <p>Cold Brew</p>
+              <p>€4.50</p>
+            </div>
+            <div class="tableDrink_each">
+              <p>Chai Latte</p>
+              <p>€4.00</p>
+            </div>
+            <div class="tableDrink_each">
+              <p>Belgian Hot Chocolate</p>
+              <p>€4.50</p>
+            </div>
+            <div class="tableDrink_each">
+              <p>Freshly Squeezed Orange Juice</p>
+              <p>€4.00</p>
+            </div>
+          </div>
+        </div>
+        <h4>Breakfast and Snacks</h4>
+        <div class="tableDrink">
+          <div class="tableDrink_1">
+            <div class="tableDrink_each">
+              <p>Belgian Waffle</p>
+              <p>€8.00</p>
+            </div>
+            <div class="tableDrink_each">
+              <p>Speculoos Cheesecake</p>
+              <p>€6.00</p>
+            </div>
+            <div class="tableDrink_each">
+              <p>Chocolate Mousse</p>
+              <p>€5.50</p>
+            </div>
+          </div>
+          <div class="tableDrink_2">
+            <div class="tableDrink_each">
+              <p>Croque Monsieur</p>
+              <p>€7.50</p>
+            </div>
+            <div class="tableDrink_each">
+              <p>Avocado Toast</p>
+              <p>€9.00</p>
+            </div>
+            <div class="tableDrink_each">
+              <p>Croissant & Jam</p>
+              <p>€6.00</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
