--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
           <h1 id="home">Brussels Brews</h1>
           <ul class="nav">
             <li class="nav-item">
-              <a class="nav-link" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
@@ -46,7 +43,9 @@
         <div class="hourAdress_each">
           <span><i class="fa-solid fa-location-dot"></i></span>
           <div>
-            <p>Rue des Artisans 42 <br />1000 Bruxelles</p>
+            <p>
+              <a href="#">Rue des Artisans 42 <br />1000 Bruxelles</a>
+            </p>
           </div>
         </div>
       </div>
@@ -76,7 +75,11 @@
       <div class="grid">
         <div class="grid-1 row">
           <img class="col-7" src="/pictures/grid/bike.jpg" alt="shop" />
-          <img class="col-5 last" src="/pictures/grid/coffee.jpg" alt="coffee" />
+          <img
+            class="col-5 last"
+            src="/pictures/grid/coffee.jpg"
+            alt="coffee"
+          />
         </div>
         <div class="grid-2 row">
           <img class="col-4" src="/pictures/grid/table.jpg" alt="coffee" />
@@ -206,8 +209,10 @@
         </div>
         <div class="info_each">
           <h3>Find Us</h3>
-          <p>Rue des Artisans 42</p>
-          <p>1000 Bruxelles</p>
+          <a href="#">
+            <p>Rue des Artisans 42</p>
+            <p>1000 Bruxelles</p>
+          </a>
         </div>
         <div class="info_each">
           <h3>Contact Us</h3>
